--- a/index.ipynb
+++ b/index.ipynb
@@ -704,7 +704,8 @@
    "source": [
     "\"\"\"\n",
     "# The highest Adjusted Rand Score achieved was 0.24 which tells us that the clusters are not random chance \n",
-    "# We dropped two PCA components the remaining 4 accounting for 94% of the explained variance \n",
+    "# We dropped two PCA components the remaining 4 accounting for 94% of the explained variance this resulted to the \n",
+    "0.24 of the Adjusted Rand score achieved hence it was a worthy trade-off losing only 6% of the explained variance\n",
     "\"\"\""
    ]
   },
